# yt-live-bevy-animation-events

./: .gitignore  Cargo.toml
assets/: character.blend  character.glb
src/: main.rs
