[package]
name = "yt-live-bevy-animation-events"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0-rc.3"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
